tests/test-dirs/upstream-typing-recovery/original-tests/not_a_packed_module.compilers.reference
File "not_a_packed_module.ml", line 1:
Error: Multiple errors were encountered
File "not_a_packed_module.ml", line 14, characters 12-31:
14 |   let a = f (module struct end)
                 ^^^^^^^^^^^^^^^^^^^
  This expression is packed module, but the expected type is int
File "not_a_packed_module.ml", line 20, characters 14-33:
20 |     let a = f (module struct end)
                   ^^^^^^^^^^^^^^^^^^^
  This expression is packed module, but the expected type is int
File "not_a_packed_module.ml", line 25, characters 17-24:
25 | let t : string = x + U.x
                      ^^^^^^^
  This expression has type int but an expression was expected of type string
